--- a/css/style.css
+++ b/css/style.css
@@ -195,11 +195,6 @@ td
 	padding:5px;
 }
 
-td .firstcol
-{
-	
-}
-
 th
 {
 	border-bottom: 5px solid black;
@@ -318,7 +313,7 @@ fieldset
 	border-radius: 10px;
 	padding: 10px;
 	margin:10px;
-	height: auto;
+	min-height:150px;
 	width: auto;
 }
 
