--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,10 @@ a:active {
 	outline: thin outset;
     padding: 5px;
     margin: 10px;
+    font-weight: normal;
 }
+
+
 
 .space{
 	padding: 15px;
@@ -182,6 +185,8 @@ table
 	border-collapse:collapse;
 	width: 100%;
 	text-align: center;
+	margin-bottom: 15px;
+	margin-top: 15 px;
 	
 }
 
@@ -718,7 +723,7 @@ legend
 	text-aling: left;
 }
 #customizing_entries label{
-	width: 7em;
+	width: 17em;
     display: block;
     float: left;
     margin-bottom: 5px;
@@ -726,6 +731,10 @@ legend
 #customizing_entries input{
 	width: 200px;
 	margin-bottom: 5px;
+}
+
+.content{
+	text-align: left;
 }
 .content img{
 	margin: 5px;
@@ -741,6 +750,10 @@ legend
 	width: 7em;
     float: left;	
 }
+.content table{
+	margin-top: 20px;
+	margin-bottom: 15px;
+}
 
 .content a:focus { 
 	font-weight:bold; color:black; text-decoration:none; 
@@ -748,6 +761,7 @@ legend
 .content a:active {
 	color:black; text-decoration:none; 
 }
+
 
 
 /*---------------- contact form --------------------------------------*/
