--- a/css/style.css
+++ b/css/style.css
@@ -647,6 +647,9 @@ legend
 	float: left;
 	margin-top: 2px;
 }
+#customer_header img[id="logout"]{
+	margin-top: 2px;
+}
 
 
 .cust_data{
@@ -789,18 +792,18 @@ table td[id="small_font"]{
 
 .admin_logout{
 	float: right;
-	margin: 10px;
+	margin: 5px;
 	font-weight:bold;
 	font-size: 0.8em;
 	color:#A0A0A0;
 	clear:both;
-	right: 10px;
+	right: 5px;
 	position: absolute;
+	line-height: 1.6em;
 }
 .admin_logout img[id="logout"]{
-	position: absolute;
-    right: 0px;
-    top: 0px;
+	float: right;
+	margin-left: 2px;
 }
 #logout_text{
 	position: absolute;
