--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,11 @@ body
 	box-shadow: inset 0 0 10px 0 #000;
 }
 
+/* style for divs with text align left */
+.left_text_align {
+	text-align: left;
+}
+
 /*style of footer*/
 .footer
 {
