--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,8 @@ h3
 {
 	text-align: left;
 	color: #131313;
+	font-size: 1.4em;
+	margin: 6px;
 }
 
 hr
@@ -622,6 +624,25 @@ legend
 .registrationform input[type="reset"]{
 	margin-left: 80px;
 	margin-top: 10px;
+}
+
+.help_style li{
+	margin-bottom: 10px;
+	margin-right: 30px;
+	margin-top: 10px;
+	font-size: 98%;
+	text-align: justify;	
+}
+.help_style ol li{
+	color: #1874CD;
+}
+.help_style ul li{
+	color: black;
+}
+#sitemap{
+ 	height: 90%;
+    margin: 20px;
+    width: 90%;
 }
 
 /* --------------- Customer Center -------------------------------------- */
