--- a/css/handheld.css
+++ b/css/handheld.css
@@ -1,8 +1,3 @@
-.hide_for_mobile
-{
-	display:none;
-}
-
 body 
 {
 	color: #131313;
@@ -12,6 +7,87 @@ body
 	font-size:1em;
 	font-family: Arial, Helvetica, sans-serif;
 }
+
+.hide
+{
+	display:none;
+}
+
+/*.mobilemenu ul
+{
+	
+	float:right;
+	height:100%;
+	margin:0;
+	padding:0;
+	width:30%;
+	list-style-type:none;
+	position:relative;
+	height:90px;
+	font-size:0.7em;
+	font-weight:bold;
+	background:transparent url(../images/nav_bg.png) repeat-x top left;
+	font-family:Arial, Helvetica, sans-serif;
+	border-bottom:1px solid #000000;
+	border-top:1px solid #000000;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313');
+	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); 
+	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); 
+}
+
+.mobilemenu li
+{
+	display:block;
+	float:left;
+	margin:0;
+	padding:0;
+	width:100%;
+	text-align: center;msin
+}
+	
+.mobilemenu li a
+{
+	display:block;
+	float:left;
+	color:#999999;
+	text-decoration:none;
+	font-weight:bold;
+	height:100%;
+	width:100%;
+
+}*/
+
+.mobilemenu  {
+	position:static;
+	float:right;
+	width:100px;
+	height:inherit;
+	background-color:#131313;
+}
+
+.mobilemenu  ul {
+	list-style-type:none;
+	padding:0;
+	
+}
+.mobilemenu li {
+	
+	font: 2em 'Lucida Sans Unicode', 'Bitstream Vera Sans', 'Trebuchet Unicode MS', 'Lucida Grande', Verdana, Helvetica, sans-serif;
+
+}
+.mobilemenu  a {
+	padding:20px;
+ 	display:block;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313');
+	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); 
+	background: -moz-linear-gradient(top,  #7f7f7f,  #131313);
+	color:white;
+	text-decoration: none;
+	font-weight:normal;
+	text-align:center;
+}
+
+
 
 
 
@@ -37,7 +113,9 @@ body
 
 
 .content_container {
-	background-color: #F0F0F0;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00abf4', endColorstr='#F0F0F0'); /* for IE */
+	background: -webkit-gradient(linear, left top, left bottom, from(#00abf4), to(#F0F0F0)); /* for webkit browsers */
+	background: -moz-linear-gradient(top,  #00abf4,  #F0F0F0); /* for firefox 3.6+ */ 
 	width: 100%;
 	text-align:center;
 	position:relative;
@@ -275,7 +353,7 @@ legend
 
 
 #logo {
-	width:70%;
+	width:60%;
 	float:left;
 	margin: 2%;
 }
@@ -352,39 +430,32 @@ legend
 }
 
 */
-.mainmenu ul
+/*.mainmenu ul
 {
-	
-	float:left;
-	margin:0;
+	height:100%;
 	padding:0;
-	list-style-type:none;
-	width:100%;
-	position:relative;
-	height:60px;
-	font-size:0.7em;
+	font-size:1em;
 	font-weight:bold;
-	background:transparent url(../images/nav_bg.png) repeat-x top left;
+	
 	font-family:Arial, Helvetica, sans-serif;
 	border-bottom:1px solid #000000;
 	border-top:1px solid #000000;
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313');
-	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); 
-	background: -moz-linear-gradient(top,  #7f7f7f,  #131313); 
+
 }
 
 .mainmenu li
 {
-	display:block;
-	float:left;
-	margin:0;
-	padding:0;
-	width:20%;
+
 	text-align: center;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313');
+	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); 
+	background: -moz-linear-gradient(top,  #7f7f7f,  #131313);
+	width:100%;
 }
 	
 .mainmenu li a
 {
+	
 	display:block;
 	float:left;
 	color:#999999;
@@ -393,37 +464,36 @@ legend
 	height:100%;
 	width:100%;
 
-}
-	
-.mainmenu li a.mm_active 
-{
-	color: white;
-	display:inline;
-	margin:0;
+}*/
+
+
+.mainmenu {
+	position:absolute;
 	width:100%;
 	height:100%;
-	background:transparent url(../images/nav_bg.png) 0px 0px no-repeat;
+	background-color:#131313;
 }
 
-#mainmenuelement
-{
-	float:right;
-	width:40%;
+.mainmenu ul {
+	list-style-type:none;
+	padding:0;
+	
 }
+.mainmenu li {
+	
+	font: 2em 'Lucida Sans Unicode', 'Bitstream Vera Sans', 'Trebuchet Unicode MS', 'Lucida Grande', Verdana, Helvetica, sans-serif;
 
-#help
-{
-display:none;
 }
-
-#imprint
-{
-display:none;
-}
-
-#help
-{
-display:none;
+.mainmenu a {
+	padding:15px;
+ 	display:block;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7f7f7f', endColorstr='#131313');
+	background: -webkit-gradient(linear, left top, left bottom, from(#7f7f7f), to(#131313)); 
+	background: -moz-linear-gradient(top,  #7f7f7f,  #131313);
+	color:white;
+	text-decoration: none;
+	font-weight:normal;
+	text-align:center;
 }
 
 .registrationform{
