--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,7 @@ body
 	clear: both;
 	padding-bottom: 40px;
 	background-repeat:no-repeat;
+	min-height: 300px;
 	
 	-moz-box-shadow: inset 0 0 10px 0 #000;
 	-webkit-box-shadow: inset 0 0 10px 0 #000;
@@ -633,6 +634,13 @@ legend
 .registrationform input[type="reset"]{
 	margin-left: 80px;
 	margin-top: 10px;
+	float: left;
+	padding: 3px 1px;
+}
+.registrationform input[id="register"]{
+	margin-top: 10px;
+	float: left;
+	padding: 3px 1px;
 }
 
 .help_style li{
