--- a/css/style.css
+++ b/css/style.css
@@ -926,7 +926,7 @@ table td[id="small_font"]{
 }
 .content label{
 	margin-left: 10px;
-	width: 7em;
+	width: 8em;
     float: left;	
 }
 .content label[for="label_attribute"], label[for="value"]{
@@ -942,6 +942,11 @@ table td[id="small_font"]{
 .content label[for="content_title"]{
 	font-weight: bold;
 	width: 45px;
+}
+.content label[for="new_admin_password"]{
+	margin-left: 10px;
+	width: 9em;
+    float: left;	
 }
 .content input{
 	margin-left: 10px;
@@ -960,9 +965,16 @@ table td[id="small_font"]{
 .content select{
 	margin-left: 10px;
 }
+
+#edit_server_editor label{
+	margin-left: 10px;
+	width: 10em;
+    float: left;	
+}
 #new_server_editor label{
 	width: 13em;
 }
+
 
 #img_delete{
 	margin: 0 10px;
