--- a/css/style.css
+++ b/css/style.css
@@ -216,6 +216,11 @@ a.back:hover{
 .messagearea{
 	color: black;
 }
+#messagearea_registration{
+	color: red;
+	margin-top: 10px;
+}
+
 
 /*Error Message Area*/
 #error_msg_area{
@@ -594,7 +599,7 @@ legend
 }
 .registrationform label{
 	margin-left: 10px;
-	width: 7em;
+	width: 7.5em;
     float: left;	
 }
 .registrationform label[for="title"]{
